reduce overlap bug on mobile phone

--- a/graphwhy/static/theme.css
+++ b/graphwhy/static/theme.css
@@ -57,7 +57,7 @@ label{
     background-color:#f1f1f1a9;
 }
 .active.button{
-    width:42%;
+    width:32%;
 }
 
 .noHover{
